engine/scripting/native_api/dse_api.gen.h

DSE_CAPI_GEN float dse_gi_probe_get_normal_bias(uint32_t e);
DSE_CAPI_GEN void  dse_gi_probe_set_normal_bias(uint32_t e, float v);
DSE_CAPI_GEN float dse_gi_probe_get_view_bias(uint32_t e);
DSE_CAPI_GEN void  dse_gi_probe_set_view_bias(uint32_t e, float v);
DSE_CAPI_GEN int  dse_gi_probe_get_show_debug_probes(uint32_t e);
DSE_CAPI_GEN void dse_gi_probe_set_show_debug_probes(uint32_t e, int v);
/* ---- FoliageComponent ---- */
DSE_CAPI_GEN int  dse_foliage_get_enabled(uint32_t e);
DSE_CAPI_GEN void dse_foliage_set_enabled(uint32_t e, int v);
DSE_CAPI_GEN float dse_foliage_get_wind_strength(uint32_t e);
DSE_CAPI_GEN void  dse_foliage_set_wind_strength(uint32_t e, float v);
DSE_CAPI_GEN float dse_foliage_get_stiffness(uint32_t e);
DSE_CAPI_GEN void  dse_foliage_set_stiffness(uint32_t e, float v);
DSE_CAPI_GEN float dse_foliage_get_phase_offset(uint32_t e);
DSE_CAPI_GEN void  dse_foliage_set_phase_offset(uint32_t e, float v);
DSE_CAPI_GEN float dse_foliage_get_push_response(uint32_t e);
DSE_CAPI_GEN void  dse_foliage_set_push_response(uint32_t e, float v);
/* ---- RigidBody3DComponent ---- */
DSE_CAPI_GEN int  dse_rigidbody3d_get_type(uint32_t e);
DSE_CAPI_GEN void dse_rigidbody3d_set_type(uint32_t e, int v);
DSE_CAPI_GEN float dse_rigidbody3d_get_mass(uint32_t e);
DSE_CAPI_GEN void  dse_rigidbody3d_set_mass(uint32_t e, float v);
DSE_CAPI_GEN float dse_rigidbody3d_get_drag(uint32_t e);
DSE_CAPI_GEN void  dse_rigidbody3d_set_drag(uint32_t e, float v);
DSE_CAPI_GEN float dse_rigidbody3d_get_angular_drag(uint32_t e);
DSE_CAPI_GEN void  dse_rigidbody3d_set_angular_drag(uint32_t e, float v);
DSE_CAPI_GEN int  dse_rigidbody3d_get_use_gravity(uint32_t e);
DSE_CAPI_GEN void dse_rigidbody3d_set_use_gravity(uint32_t e, int v);
DSE_CAPI_GEN float dse_rigidbody3d_get_gravity_scale(uint32_t e);
DSE_CAPI_GEN void  dse_rigidbody3d_set_gravity_scale(uint32_t e, float v);
DSE_CAPI_GEN int  dse_rigidbody3d_get_is_kinematic(uint32_t e);
DSE_CAPI_GEN void dse_rigidbody3d_set_is_kinematic(uint32_t e, int v);
DSE_CAPI_GEN int  dse_rigidbody3d_get_collision_layer(uint32_t e);
DSE_CAPI_GEN void dse_rigidbody3d_set_collision_layer(uint32_t e, int v);
DSE_CAPI_GEN int  dse_rigidbody3d_get_collision_mask(uint32_t e);
DSE_CAPI_GEN void dse_rigidbody3d_set_collision_mask(uint32_t e, int v);
/* ---- BoxCollider3DComponent ---- */
DSE_CAPI_GEN void dse_box_collider3d_get_size(uint32_t e, float* x, float* y, float* z);
DSE_CAPI_GEN void dse_box_collider3d_set_size(uint32_t e, float x, float y, float z);
DSE_CAPI_GEN void dse_box_collider3d_get_center(uint32_t e, float* x, float* y, float* z);
DSE_CAPI_GEN void dse_box_collider3d_set_center(uint32_t e, float x, float y, float z);
DSE_CAPI_GEN int  dse_box_collider3d_get_is_trigger(uint32_t e);
DSE_CAPI_GEN void dse_box_collider3d_set_is_trigger(uint32_t e, int v);
DSE_CAPI_GEN float dse_box_collider3d_get_bounciness(uint32_t e);
DSE_CAPI_GEN void  dse_box_collider3d_set_bounciness(uint32_t e, float v);
DSE_CAPI_GEN float dse_box_collider3d_get_friction(uint32_t e);
DSE_CAPI_GEN void  dse_box_collider3d_set_friction(uint32_t e, float v);
/* ---- SphereCollider3DComponent ---- */
DSE_CAPI_GEN float dse_sphere_collider3d_get_radius(uint32_t e);
DSE_CAPI_GEN void  dse_sphere_collider3d_set_radius(uint32_t e, float v);
DSE_CAPI_GEN void dse_sphere_collider3d_get_center(uint32_t e, float* x, float* y, float* z);
DSE_CAPI_GEN void dse_sphere_collider3d_set_center(uint32_t e, float x, float y, float z);
DSE_CAPI_GEN int  dse_sphere_collider3d_get_is_trigger(uint32_t e);
DSE_CAPI_GEN void dse_sphere_collider3d_set_is_trigger(uint32_t e, int v);
DSE_CAPI_GEN float dse_sphere_collider3d_get_bounciness(uint32_t e);
DSE_CAPI_GEN void  dse_sphere_collider3d_set_bounciness(uint32_t e, float v);
DSE_CAPI_GEN float dse_sphere_collider3d_get_friction(uint32_t e);
DSE_CAPI_GEN void  dse_sphere_collider3d_set_friction(uint32_t e, float v);
/* ---- CapsuleCollider3DComponent ---- */
DSE_CAPI_GEN float dse_capsule_collider3d_get_radius(uint32_t e);
DSE_CAPI_GEN void  dse_capsule_collider3d_set_radius(uint32_t e, float v);
DSE_CAPI_GEN float dse_capsule_collider3d_get_height(uint32_t e);
DSE_CAPI_GEN void  dse_capsule_collider3d_set_height(uint32_t e, float v);
DSE_CAPI_GEN void dse_capsule_collider3d_get_center(uint32_t e, float* x, float* y, float* z);
DSE_CAPI_GEN void dse_capsule_collider3d_set_center(uint32_t e, float x, float y, float z);
DSE_CAPI_GEN int  dse_capsule_collider3d_get_direction(uint32_t e);
DSE_CAPI_GEN void dse_capsule_collider3d_set_direction(uint32_t e, int v);
DSE_CAPI_GEN int  dse_capsule_collider3d_get_is_trigger(uint32_t e);
DSE_CAPI_GEN void dse_capsule_collider3d_set_is_trigger(uint32_t e, int v);
DSE_CAPI_GEN float dse_capsule_collider3d_get_bounciness(uint32_t e);
DSE_CAPI_GEN void  dse_capsule_collider3d_set_bounciness(uint32_t e, float v);
DSE_CAPI_GEN float dse_capsule_collider3d_get_friction(uint32_t e);
DSE_CAPI_GEN void  dse_capsule_collider3d_set_friction(uint32_t e, float v);
/* ---- MeshCollider3DComponent ---- */
DSE_CAPI_GEN int  dse_mesh_collider3d_get_convex(uint32_t e);
DSE_CAPI_GEN void dse_mesh_collider3d_set_convex(uint32_t e, int v);
DSE_CAPI_GEN int  dse_mesh_collider3d_get_is_trigger(uint32_t e);
DSE_CAPI_GEN void dse_mesh_collider3d_set_is_trigger(uint32_t e, int v);
DSE_CAPI_GEN float dse_mesh_collider3d_get_bounciness(uint32_t e);
DSE_CAPI_GEN void  dse_mesh_collider3d_set_bounciness(uint32_t e, float v);
DSE_CAPI_GEN float dse_mesh_collider3d_get_friction(uint32_t e);