GameScripts/DSEngine.Runtime/Generated/Native.gen.cs


    [LibraryImport(Lib, EntryPoint = "dse_gi_probe_get_normal_bias")]
    internal static partial float dse_gi_probe_get_normal_bias(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_gi_probe_set_normal_bias")]
    internal static partial void dse_gi_probe_set_normal_bias(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_gi_probe_get_view_bias")]
    internal static partial float dse_gi_probe_get_view_bias(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_gi_probe_set_view_bias")]
    internal static partial void dse_gi_probe_set_view_bias(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_gi_probe_get_show_debug_probes")]
    internal static partial int dse_gi_probe_get_show_debug_probes(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_gi_probe_set_show_debug_probes")]
    internal static partial void dse_gi_probe_set_show_debug_probes(uint e, int v);

    // ---- FoliageComponent ----
    [LibraryImport(Lib, EntryPoint = "dse_foliage_get_enabled")]
    internal static partial int dse_foliage_get_enabled(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_foliage_set_enabled")]
    internal static partial void dse_foliage_set_enabled(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_foliage_get_wind_strength")]
    internal static partial float dse_foliage_get_wind_strength(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_foliage_set_wind_strength")]
    internal static partial void dse_foliage_set_wind_strength(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_foliage_get_stiffness")]
    internal static partial float dse_foliage_get_stiffness(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_foliage_set_stiffness")]
    internal static partial void dse_foliage_set_stiffness(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_foliage_get_phase_offset")]
    internal static partial float dse_foliage_get_phase_offset(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_foliage_set_phase_offset")]
    internal static partial void dse_foliage_set_phase_offset(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_foliage_get_push_response")]
    internal static partial float dse_foliage_get_push_response(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_foliage_set_push_response")]
    internal static partial void dse_foliage_set_push_response(uint e, float v);

    // ---- RigidBody3DComponent ----
    [LibraryImport(Lib, EntryPoint = "dse_rigidbody3d_get_type")]
    internal static partial int dse_rigidbody3d_get_type(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_rigidbody3d_set_type")]
    internal static partial void dse_rigidbody3d_set_type(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_rigidbody3d_get_mass")]
    internal static partial float dse_rigidbody3d_get_mass(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_rigidbody3d_set_mass")]
    internal static partial void dse_rigidbody3d_set_mass(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_rigidbody3d_get_drag")]
    internal static partial float dse_rigidbody3d_get_drag(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_rigidbody3d_set_drag")]
    internal static partial void dse_rigidbody3d_set_drag(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_rigidbody3d_get_angular_drag")]
    internal static partial float dse_rigidbody3d_get_angular_drag(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_rigidbody3d_set_angular_drag")]
    internal static partial void dse_rigidbody3d_set_angular_drag(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_rigidbody3d_get_use_gravity")]
    internal static partial int dse_rigidbody3d_get_use_gravity(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_rigidbody3d_set_use_gravity")]
    internal static partial void dse_rigidbody3d_set_use_gravity(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_rigidbody3d_get_gravity_scale")]
    internal static partial float dse_rigidbody3d_get_gravity_scale(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_rigidbody3d_set_gravity_scale")]
    internal static partial void dse_rigidbody3d_set_gravity_scale(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_rigidbody3d_get_is_kinematic")]
    internal static partial int dse_rigidbody3d_get_is_kinematic(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_rigidbody3d_set_is_kinematic")]
    internal static partial void dse_rigidbody3d_set_is_kinematic(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_rigidbody3d_get_collision_layer")]
    internal static partial int dse_rigidbody3d_get_collision_layer(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_rigidbody3d_set_collision_layer")]
    internal static partial void dse_rigidbody3d_set_collision_layer(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_rigidbody3d_get_collision_mask")]
    internal static partial int dse_rigidbody3d_get_collision_mask(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_rigidbody3d_set_collision_mask")]
    internal static partial void dse_rigidbody3d_set_collision_mask(uint e, int v);

    // ---- BoxCollider3DComponent ----
    [LibraryImport(Lib, EntryPoint = "dse_box_collider3d_get_size")]
    internal static partial void dse_box_collider3d_get_size(uint e, out float x, out float y, out float z);

    [LibraryImport(Lib, EntryPoint = "dse_box_collider3d_set_size")]
    internal static partial void dse_box_collider3d_set_size(uint e, float x, float y, float z);

    [LibraryImport(Lib, EntryPoint = "dse_box_collider3d_get_center")]
    internal static partial void dse_box_collider3d_get_center(uint e, out float x, out float y, out float z);

    [LibraryImport(Lib, EntryPoint = "dse_box_collider3d_set_center")]
    internal static partial void dse_box_collider3d_set_center(uint e, float x, float y, float z);

    [LibraryImport(Lib, EntryPoint = "dse_box_collider3d_get_is_trigger")]
    internal static partial int dse_box_collider3d_get_is_trigger(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_box_collider3d_set_is_trigger")]
    internal static partial void dse_box_collider3d_set_is_trigger(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_box_collider3d_get_bounciness")]
    internal static partial float dse_box_collider3d_get_bounciness(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_box_collider3d_set_bounciness")]
    internal static partial void dse_box_collider3d_set_bounciness(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_box_collider3d_get_friction")]
    internal static partial float dse_box_collider3d_get_friction(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_box_collider3d_set_friction")]
    internal static partial void dse_box_collider3d_set_friction(uint e, float v);

    // ---- SphereCollider3DComponent ----
    [LibraryImport(Lib, EntryPoint = "dse_sphere_collider3d_get_radius")]
    internal static partial float dse_sphere_collider3d_get_radius(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_sphere_collider3d_set_radius")]
    internal static partial void dse_sphere_collider3d_set_radius(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_sphere_collider3d_get_center")]
    internal static partial void dse_sphere_collider3d_get_center(uint e, out float x, out float y, out float z);

    [LibraryImport(Lib, EntryPoint = "dse_sphere_collider3d_set_center")]
    internal static partial void dse_sphere_collider3d_set_center(uint e, float x, float y, float z);

    [LibraryImport(Lib, EntryPoint = "dse_sphere_collider3d_get_is_trigger")]
    internal static partial int dse_sphere_collider3d_get_is_trigger(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_sphere_collider3d_set_is_trigger")]
    internal static partial void dse_sphere_collider3d_set_is_trigger(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_sphere_collider3d_get_bounciness")]
    internal static partial float dse_sphere_collider3d_get_bounciness(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_sphere_collider3d_set_bounciness")]
    internal static partial void dse_sphere_collider3d_set_bounciness(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_sphere_collider3d_get_friction")]
    internal static partial float dse_sphere_collider3d_get_friction(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_sphere_collider3d_set_friction")]
    internal static partial void dse_sphere_collider3d_set_friction(uint e, float v);

    // ---- CapsuleCollider3DComponent ----
    [LibraryImport(Lib, EntryPoint = "dse_capsule_collider3d_get_radius")]
    internal static partial float dse_capsule_collider3d_get_radius(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_capsule_collider3d_set_radius")]
    internal static partial void dse_capsule_collider3d_set_radius(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_capsule_collider3d_get_height")]
    internal static partial float dse_capsule_collider3d_get_height(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_capsule_collider3d_set_height")]
    internal static partial void dse_capsule_collider3d_set_height(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_capsule_collider3d_get_center")]
    internal static partial void dse_capsule_collider3d_get_center(uint e, out float x, out float y, out float z);

    [LibraryImport(Lib, EntryPoint = "dse_capsule_collider3d_set_center")]
    internal static partial void dse_capsule_collider3d_set_center(uint e, float x, float y, float z);

    [LibraryImport(Lib, EntryPoint = "dse_capsule_collider3d_get_direction")]
    internal static partial int dse_capsule_collider3d_get_direction(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_capsule_collider3d_set_direction")]
    internal static partial void dse_capsule_collider3d_set_direction(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_capsule_collider3d_get_is_trigger")]
    internal static partial int dse_capsule_collider3d_get_is_trigger(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_capsule_collider3d_set_is_trigger")]
    internal static partial void dse_capsule_collider3d_set_is_trigger(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_capsule_collider3d_get_bounciness")]
    internal static partial float dse_capsule_collider3d_get_bounciness(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_capsule_collider3d_set_bounciness")]
    internal static partial void dse_capsule_collider3d_set_bounciness(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_capsule_collider3d_get_friction")]
    internal static partial float dse_capsule_collider3d_get_friction(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_capsule_collider3d_set_friction")]
    internal static partial void dse_capsule_collider3d_set_friction(uint e, float v);

    // ---- MeshCollider3DComponent ----
    [LibraryImport(Lib, EntryPoint = "dse_mesh_collider3d_get_convex")]
    internal static partial int dse_mesh_collider3d_get_convex(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_mesh_collider3d_set_convex")]
    internal static partial void dse_mesh_collider3d_set_convex(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_mesh_collider3d_get_is_trigger")]
    internal static partial int dse_mesh_collider3d_get_is_trigger(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_mesh_collider3d_set_is_trigger")]
    internal static partial void dse_mesh_collider3d_set_is_trigger(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_mesh_collider3d_get_bounciness")]
    internal static partial float dse_mesh_collider3d_get_bounciness(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_mesh_collider3d_set_bounciness")]
    internal static partial void dse_mesh_collider3d_set_bounciness(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_mesh_collider3d_get_friction")]
    internal static partial float dse_mesh_collider3d_get_friction(uint e);
